[tool.poetry]
name = "outline-vpn-api-client"
version = "1.1.1"
description = "Python client for the Outline VPN Management API. Manage access keys, server settings, and metrics programmatically."
authors = ["zeph1rr <grianton535@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/Zeph1rr/outline-vpn-api-client"
repository = "https://github.com/Zeph1rr/outline-vpn-api-client"
documentation = "https://outline-vpn-api-client.readthedocs.io/en/latest/"
keywords = ["outline", "vpn", "api", "client", "shadowsocks"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
httpx = {extras = ["http2"], version = "^0.28.1", optional = true }
pydantic = "^2.10.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.25.0"

[tool.poetry.extras]
async = ["httpx"]

[tool.pytest.ini_options]
asyncio_mode = "auto"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"